--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/redux-logger": "^3.0.9",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-animatable": "^1.3.3",
+    "react-native-modal": "^13.0.1",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
