--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-animatable": "^1.3.3",
+    "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "^2.10.1",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.8.0",
