--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/redux-logger": "^3.0.9",
+    "lodash.debounce": "^4.0.8",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-animatable": "^1.3.3",
@@ -42,6 +43,7 @@
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/react": "^18.0.24",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
