--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "^2.10.1",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "^4.5.3",
