--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.71.8",
     "react-native-animatable": "^1.3.3",
     "react-native-element-dropdown": "^2.9.0",
+    "react-native-fbsdk-next": "^11.2.1",
     "react-native-gesture-handler": "^2.10.1",
     "react-native-image-viewing": "^0.2.2",
     "react-native-modal": "^13.0.1",
