--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/netinfo": "^9.3.10",
     "@react-native-firebase/app": "^18.0.0",
     "@react-native-firebase/auth": "^18.0.0",
+    "@react-native-firebase/messaging": "^18.0.0",
     "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
