--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.2.3"
+    "redux-saga": "^1.2.3",
+    "socket.io-client": "^4.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -45,6 +46,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/lodash.debounce": "^4.0.7",
+    "@types/node": "^20.3.1",
     "@types/react": "^18.0.24",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
