--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/redux-logger": "^3.0.9",
+    "axios": "^1.4.0",
     "lodash.debounce": "^4.0.8",
     "react": "18.2.0",
     "react-native": "0.71.8",
@@ -25,6 +26,7 @@
     "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "^2.10.1",
     "react-native-image-viewing": "^0.2.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "^4.5.3",
