--- a/ios/LekhnathCCI/Info.plist
+++ b/ios/LekhnathCCI/Info.plist
@@ -35,6 +35,15 @@
 			</dict>
 		</dict>
 	</dict>
+<key>NSCameraUsageDescription</key>
+	<string>Testing purposes</string>
+  <key>NSMicrophoneUsageDescription</key>
+  <string>Testing purposes</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Testing purposes</string>
+	
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string/>
 	<key>UILaunchStoryboardName</key>
