--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "^2.10.1",
+    "react-native-image-crop-picker": "^0.40.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
@@ -32,6 +33,7 @@
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-toggle-element": "^2.0.1",
+    "react-native-use-file-upload": "^0.2.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
